# examples

./: LICENSE
build_deb_package/debian/: Vagrantfile
build_deb_package/projects/cmake/: Vagrantfile
build_deb_package/projects/cmake/.vagrant/machines/default/virtualbox/: action_set_name  id  index_uuid
build_deb_package/rest/debian/: Vagrantfile
build_deb_package/rest/ubuntu/: Vagrantfile
build_deb_package/shared/: CMakeLists.txt  Utils.cmake  cmake-install.sh  or-tools-compile.sh  or-tools-package.sh  package_rest.sh  third-party-install.sh
build_deb_package/shared/cmake/: cmake-install.sh
build_deb_package/shared/gflags/: CMakeLists.txt
build_deb_package/shared/glog/: CMakeLists.txt
build_deb_package/shared/glpk/: glpk-install.sh
build_deb_package/shared/gtest/: CMakeLists.txt
build_deb_package/shared/gurobi/: gurobi-install.sh
build_deb_package/shared/sparsehash/: CMakeLists.txt
build_deb_package/ubuntu/: CMakeLists.txt  Utils.cmake  Vagrantfile  cmake-install.sh  or-tools-compile.sh  or-tools-package.sh  third-party-install.sh
build_deb_package/ubuntu-1604/: Vagrantfile
cmake_sample_project/: CMakeLists.txt
cmake_sample_project/cmake/Modules/: FindGmp.cmake  FindReadline.cmake  FindScip.cmake  FindSoplex.cmake  FindTermcap.cmake
